--- a/__tests__/fixtures/css-valid.css
+++ b/__tests__/fixtures/css-valid.css
@@ -8,10 +8,10 @@
 .Selector-1,
 .Selector-2,
 .Selector-3[type='text'] {
-  --customProperty1: #fff;
-  --customProperty2: #000;
+  --custom-property1: #fff;
+  --custom-property2: #000;
 
-  background: linear-gradient(#fff, rgba(0, 0, 0, 0.8));
+  background: linear-gradient(#fff, rgb(0 0 0 / 80%));
   box-sizing: border-box;
   display: block;
   color: #333;
@@ -46,7 +46,7 @@
 }
 @media (orientation: portrait), projection and (color) {
   .Selector-i + .Selector-ii {
-    background: color(rgb(0, 0, 0) lightness(50%));
+    background: color(rgb(0 0 0) lightness(50%));
     font-family: helvetica, 'arial black', sans-serif;
   }
 }
@@ -60,7 +60,7 @@
         -45deg,
         transparent,
         #fff 25px,
-        rgba(255, 255, 255, 1) 50px
+        rgb(255 255 255 / 100%) 50px
       );
     margin: 10px;
     margin-bottom: 5px;
