--- a/__tests__/fixtures/css-valid.css
+++ b/__tests__/fixtures/css-valid.css
@@ -1,5 +1,5 @@
-@import url('x.css');
-@import url('y.css');
+@import 'x.css';
+@import 'y.css';
 
 %IndeterminateMixin {
   content: '';
@@ -11,8 +11,8 @@
   bottom: 0;
   display: block;
   background:
-    linear-gradient(to right, var(--fillColor) 20%, transparent 30%) 0 0 / 100vw 100vw,
-    linear-gradient(to right, var(--fillColor) 30%, transparent 30%) 0 0 / 100vw 100vw var(--trackColor);
+    linear-gradient(to right, var(--fill-color) 20%, transparent 30%) 0 0 / 100vw 100vw,
+    linear-gradient(to right, var(--fill-color) 30%, transparent 30%) 0 0 / 100vw 100vw var(--track-color);
   animation:
     progress-stripes 2s linear infinite,
     size 4s ease-in-out infinite;
@@ -65,7 +65,7 @@
 }
 @media (orientation: portrait), projection and (color) {
   .Selector-i + .Selector-ii {
-    background: color(rgb(0 0 0) lightness(50%));
+    background: rgb(from rgb(0 0 0) r g b / 50%);
     font-family: helvetica, 'arial black', sans-serif;
   }
 }
